--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
     <footer>
         <p>&copy; 2025 Riko Apriliyawan</p>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
