--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>Website Konversi Suhu</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
   </head>
   <body>
     <!--Header Content-->
     <header>
       <h1>Konversi Suhu</h1>
+      <div>
+        <button id="toggle-theme">
+        <i class="fas fa-moon"></i> Change Mode
+        </button>
+      </div>
+      
+
     </header>
 
     <!--Main Content-->
